# autodocs-ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
autodocs_ai/: __init__.py  cli.py  config.py
autodocs_ai/api/: app.py  models.py
autodocs_ai/api/routes/: documents.py  health.py
autodocs_ai/core/: __init__.py  generator.py  prompts.py  renderer.py
autodocs_ai/extractors/: __init__.py  base.py  excel.py  pdf.py  text.py  word.py
autodocs_ai/providers/: __init__.py  anthropic_provider.py  azure_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
autodocs_ai/templates/: _base.typ  invoice.typ  proposal.typ  report.typ  research_paper.tex  resume.typ
autodocs_ai/utils/: citations.py  mermaid.py  versioning.py
docker/: Dockerfile  docker-compose.yml
scripts/: check-deps.py  setup-latex.sh  setup-typst.sh
tests/: test_api.py  test_cli.py  test_extractors.py  test_providers.py  test_renderer.py
